[gd_scene load_steps=17 format=3 uid="uid://b31aimhd1y3th"]

[ext_resource type="Script" path="res://Scripts/Main_menu.gd" id="1_hwpo2"]
[ext_resource type="Resource" uid="uid://c8caf46kv4lpb" path="res://characters/warrior/warrior.tres" id="2_e02bf"]
[ext_resource type="Texture2D" uid="uid://c1p6rfbe3i6h0" path="res://Assets/main-menu-background-no-buttons.png" id="2_sxkic"]
[ext_resource type="FontFile" uid="uid://1lxsncmfgwoc" path="res://Fonts/Gerhaus-PK69E.ttf" id="3_2pstc"]
[ext_resource type="PackedScene" uid="uid://d2o1mflpu6riq" path="res://Scenes/Settings.tscn" id="4_556j4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_14hlq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg7e0"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_si30d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14b3l"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8jq5"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p6l0"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tw3ja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyb4x"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwux6"]
bg_color = Color(0.662745, 0.180392, 0.180392, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hudsm"]
bg_color = Color(0.415686, 0.572549, 1, 0)

[sub_resource type="Theme" id="Theme_neu1p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwpo2")
char_stats = ExtResource("2_e02bf")

[node name="MainMenuArt" type="Sprite2D" parent="."]
position = Vector2(240, 135)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_sxkic")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = 11.0
offset_right = 414.0
offset_bottom = 53.0
color = Color(0.741176, 0.741176, 0.741176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 109.0
offset_right = 117.0
offset_bottom = 174.0
scale = Vector2(1.8, 1.8)

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.54902, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_2pstc")
theme_override_styles/normal = SubResource("StyleBoxTexture_14hlq")
theme_override_styles/hover = SubResource("StyleBoxFlat_bg7e0")
action_mode = 0
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.541176, 0.470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_2pstc")
theme_override_styles/normal = SubResource("StyleBoxTexture_si30d")
theme_override_styles/hover = SubResource("StyleBoxFlat_14b3l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y8jq5")
theme_override_styles/focus = SubResource("StyleBoxFlat_3p6l0")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.498039, 0.431373, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_2pstc")
theme_override_styles/normal = SubResource("StyleBoxTexture_tw3ja")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyb4x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bwux6")
theme_override_styles/focus = SubResource("StyleBoxFlat_hudsm")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 2.0
offset_right = 360.0
offset_bottom = 60.0
theme = SubResource("Theme_neu1p")
theme_override_colors/default_color = Color(0.662745, 0.180392, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("3_2pstc")
theme_override_font_sizes/normal_font_size = 50
text = "RED IRON"
fit_content = true
scroll_active = false

[node name="Settings" parent="." instance=ExtResource("4_556j4")]
layout_mode = 1
offset_left = 211.0
offset_top = 72.0
offset_right = 422.0
offset_bottom = 61.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
